--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 }
 #container{
     display: flex;
-    background-image: url(/images/top-banner.png);
+    background-image: url('./image/top-banner.png');
     background-repeat: no-repeat;
 }
 .myself{
@@ -52,7 +52,7 @@ body{
     bottom: 0;
     z-index: -1;
     transition: 0.5s;
-  }
+  } 
   .button:hover .btn{
     width: 100%;
   }
@@ -62,3 +62,10 @@ body{
   .button{
     border: none;
   }
+  #dream{
+    display: flex;
+    background-image: url('./image/dream-bg.png');
+    background-repeat: no-repeat;
+    background-position:right;
+    margin-top: 150px;
+} 
